# agent-run

./: .env.template  .gitignore  Cargo.toml  README.md  agent-run.toml.template
doc/: TODO.md  architecture.md
src/: agent.rs  config.rs  execution.rs  main.rs
