[package]
name = "agent-run"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Kuschel"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

[dev-dependencies]
pact_consumer = "1"
